project_ws/log/build_2025-09-08_13-20-08/telerobot_controller/stdout_stderr.log
running egg_info
writing ../../build/telerobot_controller/telerobot_controller.egg-info/PKG-INFO
writing dependency_links to ../../build/telerobot_controller/telerobot_controller.egg-info/dependency_links.txt
writing entry points to ../../build/telerobot_controller/telerobot_controller.egg-info/entry_points.txt
writing requirements to ../../build/telerobot_controller/telerobot_controller.egg-info/requires.txt
writing top-level names to ../../build/telerobot_controller/telerobot_controller.egg-info/top_level.txt
reading manifest file '../../build/telerobot_controller/telerobot_controller.egg-info/SOURCES.txt'
writing manifest file '../../build/telerobot_controller/telerobot_controller.egg-info/SOURCES.txt'
running build
running build_py
copying telerobot_controller/interface.py -> /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/build/telerobot_controller/build/lib/telerobot_controller
running install
running install_lib
creating /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/lib/python3.10/site-packages/telerobot_controller
copying /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/build/telerobot_controller/build/lib/telerobot_controller/__init__.py -> /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/lib/python3.10/site-packages/telerobot_controller
copying /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/build/telerobot_controller/build/lib/telerobot_controller/distance_messurement.py -> /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/lib/python3.10/site-packages/telerobot_controller
creating /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/lib/python3.10/site-packages/telerobot_controller/helpers
copying /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/build/telerobot_controller/build/lib/telerobot_controller/helpers/__init__.py -> /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/lib/python3.10/site-packages/telerobot_controller/helpers
copying /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/build/telerobot_controller/build/lib/telerobot_controller/helpers/webrtc.py -> /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/lib/python3.10/site-packages/telerobot_controller/helpers
copying /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/build/telerobot_controller/build/lib/telerobot_controller/interface.py -> /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/lib/python3.10/site-packages/telerobot_controller
byte-compiling /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/lib/python3.10/site-packages/telerobot_controller/__init__.py to __init__.cpython-310.pyc
byte-compiling /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/lib/python3.10/site-packages/telerobot_controller/distance_messurement.py to distance_messurement.cpython-310.pyc
byte-compiling /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/lib/python3.10/site-packages/telerobot_controller/helpers/__init__.py to __init__.cpython-310.pyc
byte-compiling /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/lib/python3.10/site-packages/telerobot_controller/helpers/webrtc.py to webrtc.cpython-310.pyc
byte-compiling /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/lib/python3.10/site-packages/telerobot_controller/interface.py to interface.cpython-310.pyc
  File "/media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/lib/python3.10/site-packages/telerobot_controller/interface.py", line 6
    from telerobot_interfaces.msg import 
                                         ^
SyntaxError: invalid syntax

running install_data
creating /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/share/ament_index
creating /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/share/ament_index/resource_index
creating /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/share/ament_index/resource_index/packages
copying resource/telerobot_controller -> /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/share/ament_index/resource_index/packages
copying package.xml -> /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/share/telerobot_controller
creating /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/share/telerobot_controller/templates
copying templates/index.html -> /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/share/telerobot_controller/templates
creating /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/share/telerobot_controller/static
copying static/main.js -> /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/share/telerobot_controller/static
copying static/joystick.min.js -> /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/share/telerobot_controller/static
creating /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/lib/telerobot_controller
creating /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/lib/telerobot_controller/helpers
copying telerobot_controller/helpers/__init__.py -> /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/lib/telerobot_controller/helpers
copying telerobot_controller/helpers/webrtc.py -> /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/lib/telerobot_controller/helpers
running install_egg_info
Copying ../../build/telerobot_controller/telerobot_controller.egg-info to /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/lib/python3.10/site-packages/telerobot_controller-0.0.0-py3.10.egg-info
running install_scripts
Installing controller script to /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/lib/telerobot_controller
Installing interface script to /media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/install/telerobot_controller/lib/telerobot_controller
writing list of installed files to '/media/ros/fedora/home/maylis/Dokumente/TeleNav/project_ws/build/telerobot_controller/install.log'
